--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "image-decode": "^1.2.2",
-    "image-encode": "^1.3.0"
+    "image-encode": "^1.3.0",
+    "jpeg-js": ">=0.4.0"
   },
   "devDependencies": {
     "mocha": "^7.2.0"
